dashboard-rewards/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dashboard-rewards
  namespace: client-dashboard-rewards
spec:
  podSelector:
    matchLabels:
      app: dashboard-rewards
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dashboard-rewards
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - ports:
        - protocol: TCP
          port: 5671
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15964
